* Cleanup some warnings